# HTTPServer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  TODO.txt
.github/: build-and-test.yml
.github/workflows/: build-and-test.yml  clang-format.yml  clang-tidy.yml  lints.yml  matrix-builds.yml  sanitizers.yml
include/: http_object.h  http_response.h  http_response_builder.h  httpobject.h  httpparser.h  logger.h  port.h  server.h
lib/: CMakeLists.txt
lib/include/: httpserver.h
lib/include/httpserver/: http_object.h  http_parser.h  http_response_builder.h  httpserver.h  port.h  router.h  server.h  utils.h
lib/src/: http_object.cpp  http_parser.cpp  http_response.cpp  http_response_builder.cpp  logger.cpp  port.cpp  router.cpp  server.cpp  utils.cpp
public/: about.html  contact.html  index.html
public/css/: style.css
public/js/: main.js
src/: CMakeLists.txt  http_response_builder.cpp  httpparser.cpp  logger.cpp  main.cpp  port.cpp  server.cpp
tests/: CMakeLists.txt  test_httpparser.cpp
tests/integration_tests/: CMakeLists.txt  common.py  conftest.py  test_basic_http_request.py  test_dynamic_route_http_request.py  test_https_enabled.py  test_invalid_requests.py  test_query_http_request.py  test_server_lifecycle.py  test_static_route_http_request.py
tests/integration_tests/server_test_build/: CMakeLists.txt  main.cpp
tests/unit_tests/: CMakeLists.txt  test_router.cpp
